agregar un nuevo color al h2 backgroundcolor

--- a/paginaperros.css
+++ b/paginaperros.css
@@ -11,6 +11,7 @@ h1 {
 h2 {
     font-family: sans-serif;
     color: #9e46d1;
+    background-color: #000000;
 }
 h3 {
     font-family: sans-serif;
