--- a/paginaperros.css
+++ b/paginaperros.css
@@ -1,14 +1,28 @@
 
 body {
-    background-color: #FBFCF6;
+    border-color: rgb(158, 9, 9);
+    color
 }
 
 h1 {
-    font-family: sans-serif;
-    color:aliceblue
+text-align:start;
+text-align:left;
+text-align:end;
+    color: rgba(19, 133, 153, 0.76);
+    font-style: italic;
+font-size:60px;
 }
 
-h3 {
-    font-family: sans-serif;
-    color: #000000;
+.box{
+max-width:calc(1400px) ;
+font-size: 25px;
+font-style:oblique;
+color: rgb(2, 72, 85);
 }
+.vertical{
+    text-align: right;
+max-width:calc(1000px);
+-moz-box-align: end;
+}
+    
+
